--- a/CodeforcesApp/app/src/main/AndroidManifest.xml
+++ b/CodeforcesApp/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        
+        <service android:name=".data.database.ContestCacheService"/>
+        
         <activity android:name=".screens.contestList.ContestListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
