--- a/CodeforcesApp/app/src/main/AndroidManifest.xml
+++ b/CodeforcesApp/app/src/main/AndroidManifest.xml
@@ -4,19 +4,22 @@
     <!-- Internet Permission -->
     <uses-permission android:name="android.permission.INTERNET" />
 
-
     <application
-
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        
-        <service android:name=".data.database.ContestCacheService"/>
-        
-        <activity android:name=".screens.contestList.ContestListActivity">
+        <activity
+            android:name=".screens.new_feature.SomeActivity"
+            android:exported="false" />
+
+        <service android:name=".data.database.ContestCacheService" />
+
+        <activity
+            android:name=".screens.contestList.ContestListActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,8 +30,7 @@
         <activity android:name=".screens.UserInfo.UserInfoActivity" />
         <activity android:name=".screens.common.BaseActivity" />
         <activity android:name=".screens.userdetails.ListItemDetailsActivity" />
-        <activity android:name=".screens.usersubmission.UserSubmissionActivity">
-        </activity>
+        <activity android:name=".screens.usersubmission.UserSubmissionActivity"></activity>
     </application>
 
 </manifest>
